Eliminate console logs and fix Give Info alignment

--- a/src/views/Give/give.scss
+++ b/src/views/Give/give.scss
@@ -316,6 +316,16 @@
       }
     }
   }
+
+  .give-info {
+    .give-info-deposit-box {
+      margin-right: 0px;
+    }
+
+    .give-info-vault-box {
+      margin-right: 0px;
+    }
+  }
 }
 
 #give-view.smaller {
